--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+
+    <!-- ======================================================= -->
+    <!-- ADD THIS SCRIPT TAG. This is the entire fix.            -->
+    <!-- It loads lame.min.js from your public folder and creates window.Lame -->
+    <!-- <script src="/lame.min.js"></script> -->
+    <!-- ======================================================= -->
+
   </head>
   <body>
     <div id="root"></div>
