--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <!-- It loads lame.min.js from your public folder and creates window.Lame -->
     <!-- <script src="/lame.min.js"></script> -->
     <!-- ======================================================= -->
+     
 
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
   </body>
 </html>
